# wlr_cpu_pipewire

./: .gitignore  README.md  meson.build  screencast.c  test_me
include/: main.h  pipewire_screencopy.h  screencast_common.h  wlr_screencopy.h
src/: main.c  pipewire_screencopy.c  screencast_common.c  wlr_screencopy.c
